// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`disable 1`] = `
Object {
  "default": Object {
    "images": Array [
      Object {
        "height": 100,
        "path": "foobar/d65e7eabf402c163ee9e87493c5b07af-100.jpg",
        "width": 100,
      },
    ],
    "src": "foobar/d65e7eabf402c163ee9e87493c5b07af-100.jpg",
    "srcSet": "foobar/d65e7eabf402c163ee9e87493c5b07af-100.jpg",
    "toString": [Function],
  },
}
`;

exports[`jpg to webp 1`] = `
Object {
  "default": Object {
    "height": 450,
    "images": Array [
      Object {
        "height": 450,
        "path": "foobar/e7f63d92182c7632f35bbeafb64478fa-500.webp",
        "width": 500,
      },
      Object {
        "height": 675,
        "path": "foobar/cbe57af3c40279cdda4195c2d34c2e88-750.webp",
        "width": 750,
      },
      Object {
        "height": 900,
        "path": "foobar/6b3bdb311d06c205f104164226695cbf-1000.webp",
        "width": 1000,
      },
    ],
    "placeholder": undefined,
    "src": "foobar/e7f63d92182c7632f35bbeafb64478fa-500.webp",
    "srcSet": "foobar/e7f63d92182c7632f35bbeafb64478fa-500.webp 500w,foobar/cbe57af3c40279cdda4195c2d34c2e88-750.webp 750w,foobar/6b3bdb311d06c205f104164226695cbf-1000.webp 1000w",
    "toString": [Function],
    "width": 500,
  },
}
`;

exports[`multiple sizes 1`] = `
Object {
  "default": Object {
    "height": 450,
    "images": Array [
      Object {
        "height": 450,
        "path": "foobar/5f436e215a7c7c83eaee4788fad3c3f3-500.jpg",
        "width": 500,
      },
      Object {
        "height": 900,
        "path": "foobar/1e07c81d23028bb7eeed24cbdfb20f5c-1000.jpg",
        "width": 1000,
      },
    ],
    "placeholder": undefined,
    "src": "foobar/5f436e215a7c7c83eaee4788fad3c3f3-500.jpg",
    "srcSet": "foobar/5f436e215a7c7c83eaee4788fad3c3f3-500.jpg 500w,foobar/1e07c81d23028bb7eeed24cbdfb20f5c-1000.jpg 1000w",
    "toString": [Function],
    "width": 500,
  },
}
`;

exports[`output first resized image height & width 1`] = `
Object {
  "default": Object {
    "height": 450,
    "images": Array [
      Object {
        "height": 450,
        "path": "foobar/5f436e215a7c7c83eaee4788fad3c3f3-500.jpg",
        "width": 500,
      },
    ],
    "placeholder": undefined,
    "src": "foobar/5f436e215a7c7c83eaee4788fad3c3f3-500.jpg",
    "srcSet": "foobar/5f436e215a7c7c83eaee4788fad3c3f3-500.jpg 500w",
    "toString": [Function],
    "width": 500,
  },
}
`;

exports[`output should be in outputPath dir 1`] = `
Object {
  "default": Object {
    "height": 450,
    "images": Array [
      Object {
        "height": 450,
        "path": "foobar/img/5f436e215a7c7c83eaee4788fad3c3f3-500.jpg",
        "width": 500,
      },
      Object {
        "height": 675,
        "path": "foobar/img/b73e15a94e8de57f5336cef9d2c6aed7-750.jpg",
        "width": 750,
      },
      Object {
        "height": 900,
        "path": "foobar/img/1e07c81d23028bb7eeed24cbdfb20f5c-1000.jpg",
        "width": 1000,
      },
    ],
    "placeholder": undefined,
    "src": "foobar/img/5f436e215a7c7c83eaee4788fad3c3f3-500.jpg",
    "srcSet": "foobar/img/5f436e215a7c7c83eaee4788fad3c3f3-500.jpg 500w,foobar/img/b73e15a94e8de57f5336cef9d2c6aed7-750.jpg 750w,foobar/img/1e07c81d23028bb7eeed24cbdfb20f5c-1000.jpg 1000w",
    "toString": [Function],
    "width": 500,
  },
}
`;

exports[`output should be relative to context 1`] = `
Object {
  "default": Object {
    "height": 450,
    "images": Array [
      Object {
        "height": 450,
        "path": "foobar/test/5f436e215a7c7c83eaee4788fad3c3f3-500x450.jpg",
        "width": 500,
      },
      Object {
        "height": 675,
        "path": "foobar/test/b73e15a94e8de57f5336cef9d2c6aed7-750x675.jpg",
        "width": 750,
      },
      Object {
        "height": 900,
        "path": "foobar/test/1e07c81d23028bb7eeed24cbdfb20f5c-1000x900.jpg",
        "width": 1000,
      },
    ],
    "placeholder": undefined,
    "src": "foobar/test/5f436e215a7c7c83eaee4788fad3c3f3-500x450.jpg",
    "srcSet": "foobar/test/5f436e215a7c7c83eaee4788fad3c3f3-500x450.jpg 500w,foobar/test/b73e15a94e8de57f5336cef9d2c6aed7-750x675.jpg 750w,foobar/test/1e07c81d23028bb7eeed24cbdfb20f5c-1000x900.jpg 1000w",
    "toString": [Function],
    "width": 500,
  },
}
`;

exports[`override min and max with size 1`] = `
Object {
  "default": Object {
    "height": 90,
    "images": Array [
      Object {
        "height": 90,
        "path": "foobar/f04749f981775d8ccb67cdd25eb89da5-100.jpg",
        "width": 100,
      },
    ],
    "placeholder": undefined,
    "src": "foobar/f04749f981775d8ccb67cdd25eb89da5-100.jpg",
    "srcSet": "foobar/f04749f981775d8ccb67cdd25eb89da5-100.jpg 100w",
    "toString": [Function],
    "width": 100,
  },
}
`;

exports[`override min and max with sizes 1`] = `
Object {
  "default": Object {
    "height": 90,
    "images": Array [
      Object {
        "height": 90,
        "path": "foobar/f04749f981775d8ccb67cdd25eb89da5-100.jpg",
        "width": 100,
      },
      Object {
        "height": 180,
        "path": "foobar/dc21f8e46cad331dc4fa74c98d95d4e1-200.jpg",
        "width": 200,
      },
    ],
    "placeholder": undefined,
    "src": "foobar/f04749f981775d8ccb67cdd25eb89da5-100.jpg",
    "srcSet": "foobar/f04749f981775d8ccb67cdd25eb89da5-100.jpg 100w,foobar/dc21f8e46cad331dc4fa74c98d95d4e1-200.jpg 200w",
    "toString": [Function],
    "width": 100,
  },
}
`;

exports[`parses json notation 1`] = `
Object {
  "default": Object {
    "height": 45,
    "images": Array [
      Object {
        "height": 45,
        "path": "foobar/3980d68b1e5545406846ef85e2785741-50.webp",
        "width": 50,
      },
      Object {
        "height": 90,
        "path": "foobar/ed5c8d3d55565cd64634dc5ab72eab55-100.webp",
        "width": 100,
      },
      Object {
        "height": 180,
        "path": "foobar/40d3163ae75c85db87a1a8b8587dd12e-200.webp",
        "width": 200,
      },
    ],
    "placeholder": undefined,
    "src": "foobar/3980d68b1e5545406846ef85e2785741-50.webp",
    "srcSet": "foobar/3980d68b1e5545406846ef85e2785741-50.webp 50w,foobar/ed5c8d3d55565cd64634dc5ab72eab55-100.webp 100w,foobar/40d3163ae75c85db87a1a8b8587dd12e-200.webp 200w",
    "toString": [Function],
    "width": 50,
  },
}
`;

exports[`png 1`] = `
Object {
  "default": Object {
    "height": 580,
    "images": Array [
      Object {
        "height": 580,
        "path": "foobar/5eb18bc55c50936dd73c6d3deb99b562-500.png",
        "width": 500,
      },
      Object {
        "height": 595,
        "path": "foobar/654ff88d35bd7fcc584c58113ce8a094-513.png",
        "width": 513,
      },
    ],
    "placeholder": undefined,
    "src": "foobar/5eb18bc55c50936dd73c6d3deb99b562-500.png",
    "srcSet": "foobar/5eb18bc55c50936dd73c6d3deb99b562-500.png 500w,foobar/654ff88d35bd7fcc584c58113ce8a094-513.png 513w",
    "toString": [Function],
    "width": 500,
  },
}
`;

exports[`png to jpeg with background color 1`] = `
Object {
  "default": Object {
    "height": 580,
    "images": Array [
      Object {
        "height": 580,
        "path": "foobar/13b0ae91cf94c37f483594343f182538-500.jpg",
        "width": 500,
      },
      Object {
        "height": 595,
        "path": "foobar/a9490550db146ab84781bb723bbba222-513.jpg",
        "width": 513,
      },
    ],
    "placeholder": undefined,
    "src": "foobar/13b0ae91cf94c37f483594343f182538-500.jpg",
    "srcSet": "foobar/13b0ae91cf94c37f483594343f182538-500.jpg 500w,foobar/a9490550db146ab84781bb723bbba222-513.jpg 513w",
    "toString": [Function],
    "width": 500,
  },
}
`;

exports[`png to webp with transparent background 1`] = `
Object {
  "default": Object {
    "height": 580,
    "images": Array [
      Object {
        "height": 580,
        "path": "foobar/386929cd2e85d53572bc465134af028d-500.webp",
        "width": 500,
      },
      Object {
        "height": 595,
        "path": "foobar/4f7c799981494fbaec5b08239740740b-513.webp",
        "width": 513,
      },
    ],
    "placeholder": undefined,
    "src": "foobar/386929cd2e85d53572bc465134af028d-500.webp",
    "srcSet": "foobar/386929cd2e85d53572bc465134af028d-500.webp 500w,foobar/4f7c799981494fbaec5b08239740740b-513.webp 513w",
    "toString": [Function],
    "width": 500,
  },
}
`;

exports[`public path should replace global publicPath 1`] = `
Object {
  "default": Object {
    "height": 450,
    "images": Array [
      Object {
        "height": 450,
        "path": "public/5f436e215a7c7c83eaee4788fad3c3f3-500.jpg",
        "width": 500,
      },
      Object {
        "height": 675,
        "path": "public/b73e15a94e8de57f5336cef9d2c6aed7-750.jpg",
        "width": 750,
      },
      Object {
        "height": 900,
        "path": "public/1e07c81d23028bb7eeed24cbdfb20f5c-1000.jpg",
        "width": 1000,
      },
    ],
    "placeholder": undefined,
    "src": "public/5f436e215a7c7c83eaee4788fad3c3f3-500.jpg",
    "srcSet": "public/5f436e215a7c7c83eaee4788fad3c3f3-500.jpg 500w,public/b73e15a94e8de57f5336cef9d2c6aed7-750.jpg 750w,public/1e07c81d23028bb7eeed24cbdfb20f5c-1000.jpg 1000w",
    "toString": [Function],
    "width": 500,
  },
}
`;

exports[`single size 1`] = `
Object {
  "default": Object {
    "height": 450,
    "images": Array [
      Object {
        "height": 450,
        "path": "foobar/5f436e215a7c7c83eaee4788fad3c3f3-500.jpg",
        "width": 500,
      },
    ],
    "placeholder": undefined,
    "src": "foobar/5f436e215a7c7c83eaee4788fad3c3f3-500.jpg",
    "srcSet": "foobar/5f436e215a7c7c83eaee4788fad3c3f3-500.jpg 500w",
    "toString": [Function],
    "width": 500,
  },
}
`;

exports[`with min and max sizes 1`] = `
Object {
  "default": Object {
    "height": 540,
    "images": Array [
      Object {
        "height": 540,
        "path": "foobar/fbc1ce89fce683e718d2c5721788a48b-600.jpg",
        "width": 600,
      },
      Object {
        "height": 630,
        "path": "foobar/c0b806b2d85e5a02e1fad5768a2071b0-700.jpg",
        "width": 700,
      },
      Object {
        "height": 720,
        "path": "foobar/f06b531451ba30dc36b68b583f6d5440-800.jpg",
        "width": 800,
      },
    ],
    "placeholder": undefined,
    "src": "foobar/fbc1ce89fce683e718d2c5721788a48b-600.jpg",
    "srcSet": "foobar/fbc1ce89fce683e718d2c5721788a48b-600.jpg 600w,foobar/c0b806b2d85e5a02e1fad5768a2071b0-700.jpg 700w,foobar/f06b531451ba30dc36b68b583f6d5440-800.jpg 800w",
    "toString": [Function],
    "width": 600,
  },
}
`;

exports[`with min and max sizes options 1`] = `
Object {
  "default": Object {
    "height": 90,
    "images": Array [
      Object {
        "height": 90,
        "path": "foobar/f04749f981775d8ccb67cdd25eb89da5-100.jpg",
        "width": 100,
      },
      Object {
        "height": 150,
        "path": "foobar/cd13762c8f30bdc04a14cc838cf58a1c-167.jpg",
        "width": 167,
      },
      Object {
        "height": 211,
        "path": "foobar/527edf0c398a8810db447e1e47c31d20-234.jpg",
        "width": 234,
      },
      Object {
        "height": 270,
        "path": "foobar/5c1d8e36227f0298374a35b3b207210d-300.jpg",
        "width": 300,
      },
    ],
    "placeholder": undefined,
    "src": "foobar/f04749f981775d8ccb67cdd25eb89da5-100.jpg",
    "srcSet": "foobar/f04749f981775d8ccb67cdd25eb89da5-100.jpg 100w,foobar/cd13762c8f30bdc04a14cc838cf58a1c-167.jpg 167w,foobar/527edf0c398a8810db447e1e47c31d20-234.jpg 234w,foobar/5c1d8e36227f0298374a35b3b207210d-300.jpg 300w",
    "toString": [Function],
    "width": 100,
  },
}
`;

exports[`with min and max sizes, and default steps 1`] = `
Object {
  "default": Object {
    "height": 450,
    "images": Array [
      Object {
        "height": 450,
        "path": "foobar/5f436e215a7c7c83eaee4788fad3c3f3-500.jpg",
        "width": 500,
      },
      Object {
        "height": 600,
        "path": "foobar/41c1b4b20eba24867930ba5077601584-667.jpg",
        "width": 667,
      },
      Object {
        "height": 751,
        "path": "foobar/27fce9f4a26d8fa1f1346553a802ad49-834.jpg",
        "width": 834,
      },
      Object {
        "height": 900,
        "path": "foobar/1e07c81d23028bb7eeed24cbdfb20f5c-1000.jpg",
        "width": 1000,
      },
    ],
    "placeholder": undefined,
    "src": "foobar/5f436e215a7c7c83eaee4788fad3c3f3-500.jpg",
    "srcSet": "foobar/5f436e215a7c7c83eaee4788fad3c3f3-500.jpg 500w,foobar/41c1b4b20eba24867930ba5077601584-667.jpg 667w,foobar/27fce9f4a26d8fa1f1346553a802ad49-834.jpg 834w,foobar/1e07c81d23028bb7eeed24cbdfb20f5c-1000.jpg 1000w",
    "toString": [Function],
    "width": 500,
  },
}
`;

exports[`with placeholder image 1`] = `
Object {
  "default": Object {
    "height": 450,
    "images": Array [
      Object {
        "height": 450,
        "path": "foobar/5f436e215a7c7c83eaee4788fad3c3f3-500.jpg",
        "width": 500,
      },
      Object {
        "height": 675,
        "path": "foobar/b73e15a94e8de57f5336cef9d2c6aed7-750.jpg",
        "width": 750,
      },
      Object {
        "height": 900,
        "path": "foobar/1e07c81d23028bb7eeed24cbdfb20f5c-1000.jpg",
        "width": 1000,
      },
    ],
    "placeholder": "data:image/jpeg;base64,/9j/2wBDAAUDBAQEAwUEBAQFBQUGBwwIBwcHBw8LCwkMEQ8SEhEPERETFhwXExQaFRERGCEYGh0dHx8fExciJCIeJBweHx7/2wBDAQUFBQcGBw4ICA4eFBEUHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh7/wAARCAAkACgDASIAAhEBAxEB/8QAHAAAAgEFAQAAAAAAAAAAAAAAAAcGAQIDBAgF/8QALxAAAQMDAgUEAAUFAAAAAAAAAQIDBAAFEQYhBxIiMVEIE0FhFBYjgYIyUnGRsf/EABgBAAMBAQAAAAAAAAAAAAAAAAABAgME/8QAHBEAAwADAAMAAAAAAAAAAAAAAAECAxExBBIi/9oADAMBAAIRAxEAPwDyb36dW5FwaFouMO3wir9VXtLLiE+EpzhR+yRitJXpnkJurDiNVMuwgol1LsIhwj4AwrB+84rpN55iNGdkyHG2mGUlbjitkoSBkk+MUotTeoXRlskqYtcWZeSnYut4ZaJ+lK3P+cV0OZXTNNkXvnpmtElortt+kRJG+6o6VNn+IOR+xqLSPTnq6zyYk+0XW3XNxo5daVlg/wAScg7ecU1dCcedM6jvLNqm2+TZ35J5WXHHUuNFXwCQAU58kYpqszIL5HsS4zvMeUcjqFZPjY96TiKRU1UvaEnozg6+uU1N1a5HU2jq/AsK5goj+9fYj6HfzRTwKARj/tFKMGOFpI1y+TlyPdMSerOHmvrpZJf5s4jLfgR2FuLbb/TbXypJ68AAjbuc1zV+DListqS4gAHKOrI7ftXesu3Q5kN2LLYTIZkJKHWXOpCwfgg7GoBeuEsWRq+DqK1JgQFRlJDrAjAtuJT/AEkJTjCh/rYeKmo3wyVaENwz4aXq+LmyUqTAftr6W/bkgpVzcvN2+NiKbfCPhnL01rVi9OPxwyhtS5Q5+bnfIUAEjA6RzA5P3U2vtqvSwpCAgqldLkltrDnMBsSQcjxk9q2OFluv7GnPb1E6t6QmS57b60gKdbz0kgdvnFJR9B7PRMAUr3GQPkUVT2SnJB2orcgyoT1E5NWuZByCaKKT4BRlRUFFW9ZVbJAz3ooqkADccx7nvRRRQB//2Q==",
    "src": "foobar/5f436e215a7c7c83eaee4788fad3c3f3-500.jpg",
    "srcSet": "foobar/5f436e215a7c7c83eaee4788fad3c3f3-500.jpg 500w,foobar/b73e15a94e8de57f5336cef9d2c6aed7-750.jpg 750w,foobar/1e07c81d23028bb7eeed24cbdfb20f5c-1000.jpg 1000w",
    "toString": [Function],
    "width": 500,
  },
}
`;

exports[`with size defined in webpack.config.js 1`] = `
Object {
  "default": Object {
    "height": 450,
    "images": Array [
      Object {
        "height": 450,
        "path": "foobar/5f436e215a7c7c83eaee4788fad3c3f3-500.jpg",
        "width": 500,
      },
      Object {
        "height": 675,
        "path": "foobar/b73e15a94e8de57f5336cef9d2c6aed7-750.jpg",
        "width": 750,
      },
      Object {
        "height": 900,
        "path": "foobar/1e07c81d23028bb7eeed24cbdfb20f5c-1000.jpg",
        "width": 1000,
      },
    ],
    "placeholder": undefined,
    "src": "foobar/5f436e215a7c7c83eaee4788fad3c3f3-500.jpg",
    "srcSet": "foobar/5f436e215a7c7c83eaee4788fad3c3f3-500.jpg 500w,foobar/b73e15a94e8de57f5336cef9d2c6aed7-750.jpg 750w,foobar/1e07c81d23028bb7eeed24cbdfb20f5c-1000.jpg 1000w",
    "toString": [Function],
    "width": 500,
  },
}
`;
